Project

General

Profile

Actions

Bug #39101

closed

Primary won't automatically repair replica on pulling error

Added by xie xingguo about 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
OSD
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 3 (0 open3 closed)

Copied to Ceph - Backport #39183: luminous: Primary won't automatically repair replica on pulling errorRejectedActions
Copied to Ceph - Backport #39184: nautilus: Primary won't automatically repair replica on pulling errorResolvedPrashant DActions
Copied to Ceph - Backport #39185: mimic: Primary won't automatically repair replica on pulling errorRejectedActions
Actions #1

Updated by Neha Ojha about 5 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Kefu Chai about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Pull request ID set to 26806
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39183: luminous: Primary won't automatically repair replica on pulling error added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39184: nautilus: Primary won't automatically repair replica on pulling error added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39185: mimic: Primary won't automatically repair replica on pulling error added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF